Added search and Messages

--- a/css/style.css
+++ b/css/style.css
@@ -148,6 +148,7 @@ body {
 }
 
 .task-input {
+  position: relative;
   display: flex;
   align-items: end;
   margin-left: 34px;
@@ -163,29 +164,151 @@ body {
 #taskInput:focus {
   padding-right: 50px;
   border: 1.5px solid rgb(173, 13, 195);
+  background-color: rgba(82, 0, 102, 0.411);
+}
+#taskInput:hover {
+  background-color: rgba(82, 0, 102, 0.411);
 }
 
+.task-input--message {
+  position: absolute;
+  width: 360px;
+  height: 69px;
+  font-size: 12px;
+  top: 0px;
+  left: -370px;
+  padding: 15px;
+  border-radius: 20px;
+  text-align: center;
+  align-items: center;
+}
+.task-input--message::before {
+  content: "!";
+  font-size: 18px;
+  margin-right: 8px;
+  box-shadow: 4px 4px 10px 4px #000;
+  padding: 5px 10px 5px 10px;
+  border-radius: 5px;
+}
+.task-input--message:after {
+  content: "";
+  position: absolute;
+  top: 67px;
+  left: 16px;
+  width: 326px;
+  height: 1px;
+  animation: runningLine 5s cubic-bezier(1, 1, 1, 1);
+}
+
+.message-error {
+  border: 1px solid rgba(255, 0, 0, 0.397);
+  background-color: rgba(66, 0, 0, 0.37);
+}
+.message-error::before {
+  content: "!";
+  color: red;
+  border: 1px solid rgba(255, 0, 0, 0.397);
+}
+.message-error:after {
+  content: "";
+  border: 1px solid #ff0000;
+}
+
+.message-warning {
+  border: 1px solid rgba(207, 159, 0, 0.39);
+  background-color: rgba(121, 88, 0, 0.37);
+}
+.message-warning::before {
+  color: orange;
+}
+.message-warning:after {
+  content: "";
+  border: 1px solid orange;
+}
+
+@keyframes runningLine {
+  0% {
+    width: 90%;
+  }
+  100% {
+    width: 0;
+  }
+}
 #addTaskButton {
   border-radius: 20px;
   padding: 15px;
   background-image: linear-gradient(45deg, hsl(278, 100%, 20%) 0%, hsl(280, 100%, 24%) 14%, hsl(281, 100%, 29%) 29%, hsl(283, 100%, 33%) 43%, hsl(284, 100%, 37%) 57%, hsl(286, 100%, 41%) 71%, hsl(287, 100%, 46%) 86%, hsl(289, 100%, 50%) 100%);
   color: #fff;
   margin-left: 15px;
+  outline: 1.75px solid transparent;
+  transition: outline 0.3s ease;
+}
+#addTaskButton:hover {
+  outline: solid 1.6px rgb(225, 1, 255);
 }
 
 #deleteTaskButton {
   margin-left: 15px;
 }
 #deleteTaskButton svg {
-  transition: stroke 0.5s ease, width 0.3s ease-in-out, height 0.3s ease-in-out;
+  transition: stroke 0.5s ease;
   stroke: #778899;
 }
 #deleteTaskButton svg:hover {
   stroke: #d000ff;
-  width: 30px;
-  height: 30px;
 }
 
+#searchButton {
+  margin-left: 15px;
+}
+#searchButton path {
+  transition: stroke 0.5s ease;
+  stroke: #778899;
+}
+#searchButton:hover path {
+  stroke: rgb(92, 6, 103);
+}
+
+#searchInput {
+  position: absolute;
+  z-index: 1;
+  top: 14px;
+  left: 393px;
+  padding: 10px 10px 10px 30px;
+  border: 1px solid rgb(92, 6, 103);
+  border-radius: 20px;
+  animation: inputSlideForwards 0.75s ease-out;
+  overflow: hidden;
+  transition: border 0.5s ease-in;
+}
+#searchInput:focus {
+  border: 1.5px solid rgb(173, 13, 195);
+}
+
+@keyframes inputSlideForwards {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 235px;
+  }
+}
+.search__hidden {
+  display: none;
+}
+
+.search__animation {
+  animation: inputSlideBackwards 0.75s ease-out;
+}
+
+@keyframes inputSlideBackwards {
+  0% {
+    width: 235px;
+  }
+  100% {
+    width: 0;
+  }
+}
 #clearAllTasks {
   margin-left: 15px;
 }
@@ -205,6 +328,31 @@ body {
   margin-left: 45px;
 }
 
+.icon__task {
+  cursor: pointer;
+  width: 45px;
+  height: 45px;
+  position: absolute;
+  left: -55px;
+  bottom: 9px;
+  border-radius: 50%;
+  transition: stroke 0.4s ease-in-out;
+}
+
+.uncompleted__icon:hover svg path {
+  stroke: #00b75c;
+}
+.uncompleted__icon svg path {
+  transition: stroke 0.1s ease-in-out;
+}
+
+.completed__icon:hover svg path {
+  stroke: #006432;
+}
+.completed__icon svg path {
+  transition: stroke 0.1s ease-in-out;
+}
+
 .uncompleted__task {
   padding: 20px;
   margin-top: 10px;
@@ -213,19 +361,6 @@ body {
   position: relative;
   justify-content: center;
   align-items: center;
-}
-.uncompleted__task::before {
-  content: "";
-  background: url(../image/icons/circle.svg) 0px 0px no-repeat;
-  background-size: cover;
-  background-position: center;
-  cursor: pointer;
-  width: 45px;
-  height: 45px;
-  position: absolute;
-  left: -55px;
-  bottom: 10px;
-  border-radius: 50%;
 }
 
 .completed__task {
@@ -237,17 +372,20 @@ body {
   justify-content: center;
   align-items: center;
 }
-.completed__task::before {
-  content: "";
-  background: url(../image/icons/check-mark.svg) 0px 0px no-repeat;
-  background-size: cover;
-  background-position: center;
+
+.text__span {
+  max-width: calc(100% - 30px);
+  display: block;
   cursor: pointer;
-  width: 45px;
-  height: 45px;
-  position: absolute;
-  left: -55px;
-  bottom: 10px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+  transition: color 0.3s ease;
+  word-wrap: break-word;
+  overflow: hidden;
+}
+.text__span:hover {
+  color: #778899;
 }
 
 .close__button {
@@ -314,6 +452,7 @@ body {
 }
 
 .header__menu {
+  z-index: 2;
   position: absolute;
   display: flex;
   flex-direction: column;
@@ -352,26 +491,6 @@ body {
   display: none;
 }
 
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-    transform: translateY(-10px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-@keyframes fadeOut {
-  from {
-    opacity: 1;
-    transform: translateY(0);
-  }
-  to {
-    opacity: 0;
-    transform: translateY(-10px);
-  }
-}
 .header__menu-item::before {
   content: "";
   position: absolute;
