--- a/scss/style.scss
+++ b/scss/style.scss
@@ -103,7 +103,7 @@ $spring-green: #00b75c;
 
 }
 
-.task-input--message {
+.task-input__message {
 	position: absolute;
 	width: 360px;
 	height: 69px;
@@ -135,7 +135,7 @@ $spring-green: #00b75c;
 	}
 }
 
-.message-error {
+.message--error {
 	border: 1px solid rgba(255, 0, 0, 0.397);
 	background-color: rgba(66, 0, 0, 0.37);
 
@@ -151,9 +151,11 @@ $spring-green: #00b75c;
 	}
 }
 
-.message-warning {
+.message--warning {
+	padding: 20px 15px 10px 15px;
 	border: 1px solid rgba(207, 159, 0, 0.39);
 	background-color: rgba(121, 88, 0, 0.37);
+
 
 	&::before {
 		color: orange;
@@ -451,6 +453,7 @@ $spring-green: #00b75c;
 	border-radius: 5px;
 	white-space: nowrap;
 	box-shadow: 0px 0px 10px #778899;
+
 }
 
 
