--- a/scss/_dropdown.scss
+++ b/scss/_dropdown.scss
@@ -17,7 +17,7 @@
 	top: 40px;
 	left: 0px;
 	white-space: nowrap;
-	background-color: $menu-background;
+	background-color: #1f1f1f;
 	box-shadow: 8px 8px 10px#000;
 }
 
