--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -4,9 +4,9 @@
 
 .header__container {
 	display: flex;
-	text-align: center;
+	text-align: left;
 	align-items: center;
-	justify-content: center;
+	justify-content: start;
 }
 
 .header__title {
