--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -30,3 +30,5 @@ $light-slate-gray: #778899;
 $spring-green: #00b75c;
 $menu-background: #1f1f1f50;
 $menu-item-hover: #50505050;
+$notification-warning: #9A7516;
+$notification-background: #9A751630;
