--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,6 +17,7 @@
 // Стили основных компонентов
 @import './header';
 @import './dropdown';
+@import './notification';
 @import './search';
 @import './todo-create';
 @import './todo-list';
