--- a/css/main.css
+++ b/css/main.css
@@ -137,9 +137,9 @@ body {
 
 .header__container {
   display: flex;
-  text-align: center;
+  text-align: left;
   align-items: center;
-  justify-content: center;
+  justify-content: start;
 }
 
 .header__title {
@@ -167,7 +167,7 @@ body {
   top: 40px;
   left: 0px;
   white-space: nowrap;
-  background-color: rgba(31, 31, 31, 0.3137254902);
+  background-color: #1f1f1f;
   box-shadow: 8px 8px 10px #000;
 }
 
@@ -214,19 +214,116 @@ body {
   display: flex !important;
 }
 
-.todo-create__search {
+@keyframes progressBar {
+  100% {
+    width: 0;
+  }
+}
+#notification-container {
+  position: absolute;
+  right: 0;
+  padding: 15px 15px 0 0;
+  z-index: 10;
+}
+
+.notification {
   position: relative;
-  display: inline-block;
-  margin-top: 30px;
+  padding: 30px 40px 30px 45px;
+  border: 1px solid #778899;
+}
+.notification:not(:first-child) {
+  margin-top: 15px;
+}
+.notification::before {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  left: 7px;
+  top: 25px;
+  z-index: 100;
+}
+.notification:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 5px;
+  animation: progressBar 5s linear forwards;
+}
+.notification-warning {
+  position: relative;
+  border: 1px solid #9A7516;
+  background: rgba(154, 117, 22, 0.1882352941);
+  box-shadow: 0 0 6px #9A7516;
+}
+.notification-warning::before {
+  content: "";
+  background: url(../image/icons/warning.svg) no-repeat;
+}
+.notification-warning::after {
+  content: "";
+  background: #9A7516;
+}
+
+.notification-close {
+  position: absolute;
+  background-image: url(../image/icons/delete-notif.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 24px;
+  height: 24px;
+  top: 8px;
+  right: 8px;
+}
+.notification-close::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 30px;
+  height: 30px;
+  border-radius: 5px;
+  background-color: #fff;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+.notification-close:hover::before {
+  opacity: 0.1;
+}
+
+.header__search {
+  position: relative;
+  margin-left: 30px;
+}
+
+.header__search-visible {
+  display: block !important;
+}
+
+.header__search-button-input--hidden {
+  position: static !important;
 }
 
 .todo-create {
   margin-top: 50px;
   align-items: center;
+  position: relative;
+}
+
+.todo-create-inner {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .todo-list {
   margin-top: 30px;
+}
+
+.todo-list__item-selected {
+  background-color: rgb(18, 29, 78) !important;
 }
 
 .todo-list__item {
@@ -235,6 +332,7 @@ body {
   justify-content: center;
   text-align: center;
   align-items: center;
+  margin-bottom: 20px;
   padding: 20px 10px 20px 20px;
   background-color: rgb(11, 18, 49);
   box-shadow: 5px 5px 10px 3px #000;
@@ -249,9 +347,6 @@ body {
 }
 .todo-list__item:hover {
   background-color: rgb(16, 25, 70);
-}
-.todo-list__item:not(:last-child) {
-  margin-bottom: 20px;
 }
 
 .todo-list-content {
@@ -327,6 +422,7 @@ body {
   color: #fff;
   border-radius: 20px;
   outline: solid transparent;
+  box-shadow: 2px 3px 13px 0px #000;
   transition: outline 0.5s ease, color 0.5s ease;
 }
 #todo-create__form-submit:hover {
@@ -334,15 +430,34 @@ body {
   color: #cecece;
 }
 
-.todo-create__search-button {
+.header__search-buttons {
+  display: flex;
+}
+
+.header__search-button {
   position: absolute;
   top: 8px;
   right: 3px;
   z-index: 2;
 }
-.todo-create__search-button img {
+.header__search-button img {
   width: 24px;
   height: 24px;
+}
+
+.header__search-clear {
+  display: none;
+  position: absolute;
+  top: 8px;
+  right: 33px;
+  z-index: 2;
+}
+.header__search-clear img {
+  width: 24px;
+  height: 24px;
+}
+.header__search-clear.header__search-clear--visible {
+  display: block;
 }
 
 .todo-list__edit {
@@ -419,13 +534,15 @@ body {
   padding: 15px;
   border-radius: 20px;
   border: 1px solid rgb(92, 6, 103);
+  box-shadow: 2px 3px 13px 0px #000;
   color: #fff;
-  transition: border 0.5s ease-in, padding-right 0.5s ease, background-color 0.5s ease;
+  transition: border 0.5s ease-in, padding-right 0.5s ease, background-color 0.5s ease, box-shadow 0.5s ease-in;
 }
 #todo-create__form-input-text:focus {
   padding-right: 50px;
   border: 1.5px solid rgb(173, 13, 195);
   background-color: rgba(82, 0, 102, 0.411);
+  box-shadow: 5px 5px 11px 0px rgba(82, 0, 102, 0.411);
 }
 #todo-create__form-input-text:focus::-moz-placeholder {
   opacity: 0.75;
@@ -469,21 +586,20 @@ input:checked ~ .checkbox__custom:after {
   opacity: 1;
 }
 
-#todo-create__search-input {
+#header__search-input {
+  display: none;
   position: relative;
-  padding: 10px;
-  padding-right: 30px;
-  box-sizing: border-box;
+  padding: 10px 60px 9px 10px;
   border: 1px solid rgba(119, 136, 153, 0.3137254902);
   border-bottom: 1px solid #778899;
   z-index: 1;
 }
-#todo-create__search-input:focus {
+#header__search-input:focus {
   border-bottom: 1px solid rgb(173, 13, 195);
 }
-#todo-create__search-input:focus::-moz-placeholder {
+#header__search-input:focus::-moz-placeholder {
   opacity: 0.75;
 }
-#todo-create__search-input:focus::placeholder {
+#header__search-input:focus::placeholder {
   opacity: 0.75;
 }
