--- a/scss/_search.scss
+++ b/scss/_search.scss
@@ -1,9 +1,14 @@
-.todo-create__search {
+.header__search {
 	position: relative;
-	display: inline-block;
-	margin-top: 30px;
+	margin-left: 30px;
 }
 
-.todo-create__search-content {}
+.header__search-content {}
 
+.header__search-visible {
+	display: block !important;
+}
 
+.header__search-button-input--hidden {
+	position: static!important;
+}
