--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -1,12 +1,3 @@
-.important__button_active {
-	position: relative;
-	background: url(../image/icons/important-mark-active.svg) no-repeat;
-	background-size: cover;
-	width: 40px;
-	height: 40px;
-	z-index: 3;
-}
-
 #header__options-button {
 	cursor: pointer;
 
@@ -34,6 +25,10 @@
 		opacity: 0.1;
 	}
 
+	&:focus-visible {
+		box-shadow: 0px 0px 0px 1px #fff
+	}
+
 	@include highlightIcon(50%, 50%, 40px, 40px)
 }
 
@@ -51,6 +46,16 @@
 		outline: solid 1.6px $violet-outline;
 		color: $light-gray;
 	}
+
+	&:focus {
+		outline: solid 1.6px $violet-outline;
+	}
+
+	&:active {
+		opacity: 0.85;
+		outline: solid 1.6px $violet-outline-active;
+		transition: none;
+	}
 }
 
 .header__search-buttons {
@@ -60,18 +65,21 @@
 .header__search-button {
 	position: absolute;
 	top: 8px;
-	right: 3px;
-	z-index: 2;
 
 	img {
 		width: 24px;
 		height: 24px;
 	}
+
+	&:focus-visible {
+		box-shadow: 0px 0px 0px 1px #fff
+	}
+
+	@include highlightIcon(50%, 50%, 40px, 40px)
 }
 
 .header__search-clear {
 	display: none;
-
 	position: absolute;
 	top: 8px;
 	right: 33px;
@@ -82,14 +90,19 @@
 		height: 24px;
 	}
 
+	&:focus-visible {
+		box-shadow: 0px 0px 0px 1px #fff
+	}
+
 	&.header__search-clear--visible {
 		display: block;
+		@include highlightIcon(50%, 50%, 30px, 30px)
 	}
 }
 
+
 .todo-list__edit {
 	position: relative;
-
 	// Миксин на подтсветку иконки
 	@include highlightIcon(10px, 9px, 30px, 30px)
 }
@@ -117,4 +130,18 @@
 	}
 
 	@include highlightIcon(11px, 10.5px, 30px, 30px)
+}
+
+.important__button_active {
+	position: relative;
+	background: url(../image/icons/important-mark-active.svg) no-repeat;
+	background-size: cover;
+	width: 40px;
+	height: 40px;
+	z-index: 3;
+}
+
+.important__button-active--visible {
+	opacity: 1 !important;
+	visibility: visible !important;
 }
