--- a/scss/_dropdown.scss
+++ b/scss/_dropdown.scss
@@ -9,16 +9,24 @@
 
 #options-dropdown {
 	position: absolute;
-	z-index: 3;
-	display: none;
+	display: flex;
+	opacity: 0;
+	visibility: hidden;
 	flex-direction: column;
 	border: 1px solid #50505069;
 	border-radius: 5px;
 	top: 40px;
 	left: 0px;
+	z-index: 3;
 	white-space: nowrap;
 	background-color: #1f1f1f;
 	box-shadow: 8px 8px 10px#000;
+	transition: opacity .5s ease-in-out, visibility .5s ease-in-out;
+}
+
+.header__options-visible {
+	opacity: 1 !important;
+	visibility: visible !important;
 }
 
 .header__options-dropdown {}
@@ -28,6 +36,10 @@
 	padding: 15px 15px 15px 37px;
 	text-align: left;
 	color: #eee;
+
+	&:not(:last-child) {
+		border-bottom: 1px solid $light-slate-gray;
+	}
 
 	&:before {
 		content: '';
@@ -42,12 +54,8 @@
 		background-color: $menu-item-hover;
 	}
 
-	&:first-child {
-		border-bottom: 1px solid $light-slate-gray;
-	}
-
-	&:last-child {
-		border-top: 1px solid $light-slate-gray;
+	&:focus-visible {
+		box-shadow: 0px 0px 0px 1px #fff;
 	}
 
 	&[data-action="clear-completed-tasks"]::before {
@@ -67,8 +75,14 @@
 		background: url(../image/icons/sort-prtiority-dd.svg) 0px 0px no-repeat;
 		background-size: cover;
 	}
-}
 
-.header__options-visible {
-	display: flex !important;
+	&[data-action="sort-by-date"]::before {
+		content: '';
+		background: url(../image/icons/sort-by-creation-date.svg) 0px 0px no-repeat;
+		background-size: cover;
+		width: 30px;
+		height: 30px;
+		bottom: 9px;
+		left: 2px;
+	}
 }
